--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,10 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# lockfiles
+package-lock.json
+
+# pages
+/pages/api
+/pages/contracts
